Fix grid row height collapsing by giving image wrapper a min-height

--- a/ZEMORA DENTAL/assets/css/zenora.css
+++ b/ZEMORA DENTAL/assets/css/zenora.css
@@ -9659,4 +9659,8 @@ footer{border-top:3px solid var(--primitive-color--primary-500,#24a3b1);}
     }
 }
 
-
+@media screen and (min-width: 992px) {
+    .home-value_image-wrap {
+        min-height: 600px !important;
+    }
+}
